--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.css
@@ -1,7 +1,26 @@
-tr td:nth-child(1) {
+#tableData tr td:nth-child(4), #tableData tr td:nth-child(5) {
     text-align: right;
 }
+#tableData tr td:nth-child(2), #tableData tr td:nth-child(3)
+#tableData tr td:nth-child(6) {
+    text-align: left;
+}
 
-tr td:nth-child(4), td:nth-child(5), td:nth-child(6) {
+#tableData tr td:nth-child(1) {
     text-align: center;
+}
+
+#tableSetting {
+    z-index: 1001;
+}
+
+#tableSetting tr td:nth-child(1), #tableSetting tr td:nth-child(2), 
+#tableSetting tr td:nth-child(4), #tableSetting tr td:nth-child(8),
+#tableSetting tr td:nth-child(9) {
+    text-align: center;
+}
+
+#tableSetting tr td:nth-child(3), #tableSetting tr td:nth-child(5), 
+#tableSetting tr td:nth-child(6) {
+    text-align: right;
 }
