--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
@@ -106,7 +106,8 @@
           <tr style="text-align: center">
             <th>ลำดับ</th>
             <th>รายการ</th>
-            <th>ราคาตามแบบแจ้ง<br> ภส 02-01 </th>
+            <th>ราคาตามแบบแจ้ง
+              <br> ภส 02-01 </th>
             <th>ราคาจากข้อมูลภายนอก</th>
             <th>ราคาต่อหน่วยจากการตรวจสอบ</th>
             <th>แบบรายการภาษี ภส 03-07 </th>
@@ -121,7 +122,9 @@
             <td class="right aligned">450 </td>
             <td class="right aligned">450 </td>
             <td class="right aligned">400 </td>
-            <td class="right aligned">50</td>
+            <td class="right aligned">
+              <span class="ui red horizontal label right aligned" style="float: right;">50</span>
+            </td>
           </tr>
           <tr>
             <td class="right aligned">2</td>
@@ -130,7 +133,9 @@
             <td class="right aligned">450 </td>
             <td class="right aligned">450 </td>
             <td class="right aligned">460 </td>
-            <td class="right aligned">10</td>
+            <td class="right aligned">
+              <span class="ui green horizontal label right aligned" style="float: right;">10</span>
+            </td>
           </tr>
           <tr>
             <td class="right aligned">3</td>
@@ -139,7 +144,9 @@
             <td class="right aligned">100 </td>
             <td class="right aligned">100 </td>
             <td class="right aligned">100 </td>
-            <td class="right aligned">0</td>
+            <td class="right aligned">
+              <span class="ui green horizontal label right aligned" style="float: right;">0</span>
+            </td>
           </tr>
         </tbody>
 
