--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
@@ -95,7 +95,7 @@
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
           บ. ฮอนด้า มอเตอร์ ประเทศไทย
-          <br> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) 
+          <br> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)
           <br> เดือน พ.ย. 2559 - ส.ค. 2559
         </div>
       </div>
@@ -110,7 +110,7 @@
               <th colspan="4">ใบเสร็จเงิน</th>
               <th rowspan="2">ผลต่าง</th>
             </tr>
-            <tr style="text-align: center;" >
+            <tr style="text-align: center;">
               <th style="border-left: 1px solid rgba(34,36,38,.1);">ภาษีรวม</th>
               <th>ปริมาณ</th>
               <th>ภาษีต่อหน่วย</th>
@@ -123,15 +123,17 @@
           <tbody>
             <tr>
               <td class="center aligned">ม.ค.59</td>
-              <td >3150-TF0-TO10-M1</td>
+              <td>3150-TF0-TO10-M1</td>
               <td class="right aligned">15000</td>
-              <td class="right aligned">1500	</td>
+              <td class="right aligned">1500 </td>
               <td class="right aligned">10</td>
-              <td class="center aligned">17-01-2559	</td>
+              <td class="center aligned">17-01-2559 </td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td class="right aligned">1500</td>
-              <td class="right aligned">0</td>
+              <td class="right aligned">
+                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
+              </td>
             </tr>
           </tbody>
         </table>
