change RL link to RL button 8.1.1 ประเมินความเสี่ยงโครงการด้านงบประมาณ 8.1.2 ประเมินความเสี่ยงโครงการด้านประสิทธิภาพ 8.1.3 ประเมินความเสี่ยงโครงการรวม 8.2 ประเมินความเสี่ยงระบบสารสนเทศ 8.3.1 ประเมินความถี่การตรวจ 8.3.2 ประเมินการจัดเก็บรายได้ 8.3.3 ประเมินคดี

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -38,6 +38,10 @@
             <i class="print icon"></i>
             พิมพ์
           </button>
+          <button class="ui mini default button" (click)="popupEditData()">
+            <i class="setting icon"></i>
+            กำหนด RL
+          </button>
         </div>
       </div>
       <br>
@@ -118,16 +122,8 @@
             <th colspan="2">วิเคราะห์</th>
           </tr>
           <tr style="text-align: center;">
-            <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">
-              <a href="javascript:;" (click)="popupEditData()">
-                RL
-              </a>
-            </th>
-            <th style="width: 8%;">
-              <a href="javascript:;" (click)="popupEditData()">
-                แปลค่า
-              </a>
-            </th>
+            <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">RL</th>
+            <th style="width: 8%;">แปลค่า</th>
           </tr>
         </thead>
         <tbody>
