--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
@@ -101,22 +101,10 @@
               <th rowspan="2">ลำดับ</th>
               <th rowspan="2" style="width: 40%;">โครงการตามยุทธศาสตร์</th>
               <th rowspan="2">หน่วยงาน</th>
-              <th colspan="2">
-                <a href="javascript:;" (click)="popupWeightData()">
-                  1.งบประมาณที่ใช้ตามแผนยุทธศาสตร์ที่กรมอนุมัติ
-                </a>
-              </th>
-              <th colspan="2">
-                <a href="javascript:;" (click)="popupWeightData()">
-                  2.ประสิทธิภาพดำเนินงาน
-                </a>
-              </th>
+              <th colspan="2">1.งบประมาณที่ใช้ตามแผนยุทธศาสตร์ที่กรมอนุมัติ</th>
+              <th colspan="2">2.ประสิทธิภาพดำเนินงาน</th>
               <th colspan="1">ค่าความเสี่ยงเฉลี่ย</th>
-              <th rowspan="2">
-                <a href="javascript:;" (click)="popupEditData()">
-                  แปลค่า
-                </a>
-              </th>
+              <th rowspan="2">แปลค่า</th>
             </tr>
             <tr style="text-align: center;">
               <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">RL</th>
