--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
@@ -38,12 +38,17 @@
             <i class="print icon"></i>
             พิมพ์
           </button>
+          <button class="ui mini default button" (click)="popupEditData()">
+            <i class="setting icon"></i>
+            กำหนด RL
+          </button>
         </div>
       </div>
       <br>
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
-          กระดาษทำการประเมินความเสี่ยงผลการจัดเก็บรายได้เปรียบเทียบประมาณการฯเพื่อพิจารณาคัดเลือกหน่วยงานรับตรวจสำนักงานสรรพสามิตภาค พื้นที่ และสาขา													
+          กระดาษทำการประเมินความเสี่ยงผลการจัดเก็บรายได้เปรียบเทียบประมาณการฯเพื่อพิจารณาคัดเลือกหน่วยงานรับตรวจสำนักงานสรรพสามิตภาค
+          พื้นที่ และสาขา
           <br> ปีงบประมาณ พ.ศ. 2561
           <br> กลุ่มตรวจสอบภายใน กรมสรรพสามิต
         </div>
@@ -118,16 +123,8 @@
             <th style="width:8%;">ประมาณการ</th>
             <th style="width:8%;">ผลต่าง</th>
             <th style="width:8%;">อัตราสูงต่ำ</th>
-            <th style="width:8%;">
-              <a href="javascript:;" (click)="popupEditData()">
-                RL
-              </a>
-            </th>
-            <th style="width:8%;">
-              <a href="javascript:;" (click)="popupEditData()">
-                แปลค่า
-              </a>
-            </th>
+            <th style="width:8%;">RL</th>
+            <th style="width:8%;">แปลค่า</th>
           </tr>
         </thead>
         <tbody>
