--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-4/int08-3-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-4/int08-3-4.component.html
@@ -80,7 +80,7 @@
           &nbsp;
           <br> 4 - 6
           <br> 7 - 9
-          <br> <div style="margin-right: 1%;">10 - 12</div>
+          <br> <span style="margin-right: 1%;">10 - 12</span>
         </div>
 
         <div class="column" style="width: 12%;">
