--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
@@ -80,7 +80,8 @@
           &nbsp;
           <br> 0
           <br> 1 - 2
-          <div style="margin-right: 6%">3 - 4</div>
+          <br>
+          <span style="margin-right: 6%">3 - 4</span>
         </div>
 
         <div class="column" style="width: 12%;">
